--- a/QHeadsNTails.ipynb
+++ b/QHeadsNTails.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "<Figure size 269.064x200.667 with 1 Axes>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " > Expectation value: 0.010784313725490196\n",
+      " > Expectation value: 0.012795275590551181\n",
       " > Metadata: {'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32}\n"
      ]
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,8 @@
      "output_type": "stream",
      "text": [
       "The computer does flip the coin\n",
-      "You Win! Congrats!\n"
+      "You Win! Congrats!\n",
+      "0\n"
      ]
     }
    ],
@@ -184,7 +185,8 @@
     "    if choice == 0:\n",
     "        print(\"You Win! Congrats!\")\n",
     "    else:\n",
-    "        print(\"You Lose... its okay superposition is basiclly cheating\")\n"
+    "        print(\"You Lose... its okay superposition is basiclly cheating\")\n",
+    "print(choice)\n"
    ]
   }
  ],
